force-app/main/default/objects/FilterFlowSettings__c/FilterFlowSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Filter Flow Settings</label>
</CustomObject>