force-app/main/default/objects/FilterFlowSettings__c/fields/New_Solution_Type_Field__c.field-meta.xml
<CustomField>
    <fullName>New_Solution_Type_Field__c</fullName>
    <label>New Solution Type Field</label>
    <length>100</length>
    <type>Text</type>
</CustomField>