force-app/main/default/objects/FilterFlowSettings__c/fields/Product_Type_Field__c.field-meta.xml
<CustomField>
    <fullName>Product_Type_Field__c</fullName>
    <label>Product Type Field</label>
    <length>50</length>
    <type>Text</type>
</CustomField>