force-app/main/default/objects/FilterFlowSettings__c/fields/Region_Field__c.field-meta.xml
<CustomField>
    <fullName>Region_Field__c</fullName>
    <label>Is US Customer Field</label>
    <length>50</length>
    <type>Text</type>
</CustomField>