force-app/main/default/objects/FilterFlowSettings__c/fields/Value_to_Check_Compatibility__c.field-meta.xml
<CustomField>
    <fullName>Value_to_Check_Compatibility__c</fullName>
    <label>Value to Check Compatibility</label>
    <length>50</length>
    <type>Text</type>
</CustomField>